interpreter/tests/test_files/neg/bad_flow_WL.s
	mov r1 pc
	restrict r1 RW GLOBAL
	restrict r1 RWL GLOBAL
	halt
